Fixed cursor bug with the contact inputs on mobile

--- a/src/CSS/contact.css
+++ b/src/CSS/contact.css
@@ -127,6 +127,12 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .cursor-input-hovered {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 750px) {
   .form__container h1 {
     font-size: 2.5rem;
